--- a/assets/scss/_head-foot.scss
+++ b/assets/scss/_head-foot.scss
@@ -8,7 +8,8 @@ header {
 	margin-left: 3rem;
 	margin-right: 3rem;
 	@media #{$large-only} { 
-		padding-top: 9rem;
+		height: 15rem;
+		padding-top: 7rem;
 		margin-left: 15rem;
 		margin-right: 15rem;
 	}
